# firstbits

./: CMakeLists.txt  README.md  firstbits.cpp  firstbits.h  firstbits.kdev4  firstbitsd.cpp  mhttpdfiles.cpp  mhttpdfiles.h  microhttpdpp.cpp  microhttpdpp.hpp  test.sh  updater_daemon.py
statichttp/: a  index.html
